welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: '=' expected but ';' found.
var nbPas: Int= nbPas+1
^